--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <div>Gitの練習</div>
         <p>Pタグの追加</p>
         <p>ブランチを分岐させｐタグを追加</p>
+        <span>ブランチを分岐させspanタグを追加</span>
     </body>
 </html>
